made edit and delete button hidden from user if they did not make the review and edited the front end to make sure it is aligned with the rest of app

--- a/src/main/webapp/app/entities/review/list/review.component.scss
+++ b/src/main/webapp/app/entities/review/list/review.component.scss
@@ -10,7 +10,7 @@
   width: 700px;
   margin-left: 75px;
   overflow: hidden;
-  border: 2px solid #8aa899;
+  border: 2px solid #dcd8a2;
 }
 .commentBoxRight:hover {
   transform: translateY(-5px);
@@ -30,7 +30,7 @@
   background-color: black;
 }
 .scrollbarBoxRight::-webkit-scrollbar-track {
-  background: #f8dc75;
+  background: #dcd8a2;
 }
 
 #box {
@@ -46,8 +46,8 @@
   align-items: center;
   text-align: center;
   padding: 10px;
-  background-color: #8aa899;
-  border: 2px solid #5c6e58;
+  background-color: #dcd8a2;
+  border: 2px solid black;
   border-radius: 5px;
   width: 300px;
   height: 400px;
@@ -117,30 +117,26 @@ p {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
 }
 
-#btn btn-primary jh-create-entity create-review {
-  color: black;
-}
-
 p {
   font-family: 'cursive';
 }
 
 button {
-  background-color: #8aa899;
-  border: 2px solid #5c6e58;
+  background-color: #dcd8a2;
+  border: 2px solid black;
   display: inline-block;
   border-radius: 14px;
   font-size: 13px;
   height: 50px;
   width: 150px;
   transition-duration: 0.5s;
-  color: #5c6e58;
+  color: black;
 }
 
 button:hover {
-  background-color: #5c6e58;
-  color: #8aa899;
-  border: 2px solid #8aa899;
+  background-color: black;
+  color: #dcd8a2;
+  border: 2px solid #dcd8a2;
 }
 
 #tD {
@@ -149,24 +145,25 @@ button:hover {
 }
 
 .filterButton {
-  background-color: #8aa899;
-  border: 2px solid #5c6e58;
+  background-color: #dcd8a2;
+  border: 2px solid black;
   display: inline-block;
   border-radius: 14px;
   font-size: 13px;
   height: 30px;
-  width: 100px;
+  width: 150px;
   transition-duration: 0.5s;
-  color: #5c6e58;
+  color: black;
 }
 
 #filter1 {
   border-radius: 15px;
-  background-color: #8aa899;
-  border: 2px solid #5c6e58;
+  background-color: #dcd8a2;
+  border: 2px solid black;
   margin-left: 75px;
+  color: black;
 }
 
 #filter1::placeholder {
-  color: #5c6e58;
+  color: black;
 }
