--- a/src/main/webapp/app/entities/review/update/review-update.component.scss
+++ b/src/main/webapp/app/entities/review/update/review-update.component.scss
@@ -3,29 +3,39 @@
   height: 550px;
 }
 h2 {
+  margin-top: 5px;
   font-weight: 600;
   height: 50px;
   text-align: center;
   margin-bottom: 5px;
-  background-color: #f8dc75;
+  color: #5c6e58;
 }
 
 button {
-  background-color: #e1bf43;
-  color: white;
   display: inline-block;
   font-size: 16px;
   height: 50px;
   width: 200px;
-  transition-duration: 0.5s;
   margin-left: auto;
   padding: 15px 30px;
-  border-radius: 20px;
+  border-radius: 30px;
+  background-color: #dcd8a2;
+  color: black;
+  border: 2px solid black;
+  transition-duration: 0.5s;
 }
 
 button:hover {
   background-color: black;
-  color: #f8dc75;
+  color: #dcd8a2;
+}
+
+#btn {
+  padding: 15px 30px;
+  border-radius: 30px;
+  color: black;
+  border: 2px solid black;
+  margin-bottom: 20px;
 }
 
 body {
@@ -59,9 +69,9 @@ label {
   width: 500px;
   height: 675px;
   background-color: white;
-  border: none;
   border-radius: 5px;
   gap: 50px;
+  border: 2px solid #dcd8a2;
 }
 
 .formBorder {
@@ -85,7 +95,7 @@ label {
 }
 
 textarea {
-  background-color: #f5f5f5;
+  background-color: #dcd8a2;
   width: 90%;
   height: 130px;
   margin-left: 20px;
@@ -95,7 +105,7 @@ textarea {
 }
 
 .date {
-  background-color: #f5f5f5;
+  background-color: #dcd8a2;
   margin-left: 25px;
   width: 90%;
   height: 38px;
@@ -106,7 +116,7 @@ textarea {
 }
 
 .num {
-  background-color: #f5f5f5;
+  background-color: #dcd8a2;
   margin-top: auto;
   margin-left: 23px;
   width: 90%;
@@ -125,10 +135,6 @@ ngb-rating {
 .star {
   font-size: 60px;
   color: #b0c4de;
-}
-
-.star:hover {
-  color: #3e8acc;
 }
 
 .filled.bad {
